Changes to be committed: 	modified:   .vscode/settings.json 	modified:   proyecto/client/urls.py 	modified:   proyecto/config/urls.py 	new file:   proyecto/src/static/accounts/signin.css 	new file:   proyecto/src/templates/accounts/login.html 	modified:   proyecto/src/templates/client/home/base.html 	modified:   proyecto/users/urls.py 	modified:   proyecto/users/views.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.typeCheckingMode": "off",
     "sqltools.useNodeRuntime": true,
     "sqltools.connections": [
         {
@@ -8,5 +8,6 @@
             "database": "C:\\Users\\pheli\\Escritorio\\xxi\\proyecto\\db.sqlite3",
             "name": "db.sqlite3"
         }
-    ]
+    ],
+    "python.linting.enabled": false
 }
