Changes to be committed: 	modified:   .vscode/settings.json 	deleted:    "C:\\Users\\pheli\\Escritorio\\xxi\\proyecto\\db.sqlite3" 	modified:   proyecto/client/models.py 	modified:   proyecto/config/settings.py 	modified:   proyecto/config/settings_caprover.py 	modified:   proyecto/config/settings_dev.py 	new file:   proyecto/manager/migrations/0001_initial.py 	renamed:    proyecto/users/migrations/__init__.py -> proyecto/manager/migrations/__init__.py 	modified:   proyecto/manager/models.py 	deleted:    proyecto/users/migrations/0001_initial.py 	deleted:    proyecto/users/migrations/0002_auto_20221128_1835.py 	modified:   proyecto/users/models.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
             "name": "db.sqlite3"
         }
     ],
-    "python.linting.enabled": false
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
