--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 # Created by https://www.gitignore.io/api/linux,macos,python,django,windows,pycharm+all
 # Edit at https://www.gitignore.io/?templates=linux,macos,python,django,windows,pycharm+all
-
+venv
 ### Django ###
 *.log
 *.pot
